--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /src/FoodZone/.vs/FoodZone/v17
+/src/FoodZone/FoodZone.Models/bin/Debug/net6.0
+/src/FoodZone/FoodZone.Models/obj
