--- a/src/FoodZone/FoodZone.API/FoodZone.API.csproj
+++ b/src/FoodZone/FoodZone.API/FoodZone.API.csproj
@@ -21,12 +21,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FoodZone.Data\FoodZone.Data.csproj" />
-    <ProjectReference Include="..\FoodZone.Extensions\FoodZone.Extensions.csproj" />
     <ProjectReference Include="..\FoodZone.Models\FoodZone.Models.csproj" />
     <ProjectReference Include="..\FoodZone.Services\FoodZone.Services.csproj" />
   </ItemGroup>
