--- a/src/FoodZone/FoodZone.API/FoodZone.API.csproj
+++ b/src/FoodZone/FoodZone.API/FoodZone.API.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\FoodZone.Services\FoodZone.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IdentityController\" />
+  </ItemGroup>
+
 </Project>
