--- a/src/FoodZone/FoodZone.API/FoodZone.API.csproj
+++ b/src/FoodZone/FoodZone.API/FoodZone.API.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="IdentityController\**" />
+    <Content Remove="IdentityController\**" />
+    <EmbeddedResource Remove="IdentityController\**" />
+    <None Remove="IdentityController\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -29,10 +36,6 @@
     <ProjectReference Include="..\FoodZone.Data\FoodZone.Data.csproj" />
     <ProjectReference Include="..\FoodZone.Models\FoodZone.Models.csproj" />
     <ProjectReference Include="..\FoodZone.Services\FoodZone.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="IdentityController\" />
   </ItemGroup>
 
 </Project>
