--- a/src/FoodZone/FoodZone.API/appsettings.json
+++ b/src/FoodZone/FoodZone.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "FoodZoneCnn": "Server=.;Database=FoodZone;Trusted_Connection=True;Integrated Security=true"
   },
+  "Jwt": {
+    "Issuer": "FoodZone"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
