--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /src/FoodZone/.vs
 /src/FoodZone/FoodZone.Extensions/obj
 /src/FoodZone/FoodZone.API/logs
+/src/FoodZone/FoodZone.Web/obj/Debug/net6.0
+/src/FoodZone/FoodZone.Web/obj
