--- a/src/FoodZone/FoodZone.Web/Views/Web.config
+++ b/src/FoodZone/FoodZone.Web/Views/Web.config
@@ -22,6 +22,7 @@
 				<add namespace="Microsoft.AspNet.Identity" />
 				<add namespace="Microsoft.AspNet.Identity.EntityFramework" />
 				<add namespace="FoodZone.Web.ViewModels" />
+				<add namespace="FoodZone.Models.Common" />
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
