Add ReservationDetail, Category, MenuCategory, UserMenu

--- a/src/FoodZone/FoodZone.Services/FoodZone.Services.csproj
+++ b/src/FoodZone/FoodZone.Services/FoodZone.Services.csproj
@@ -54,26 +54,30 @@
     <Compile Include="BaseServices\BaseServices.cs" />
     <Compile Include="BaseServices\IBaseServices.cs" />
     <Compile Include="IServices\IBlogServices.cs" />
+    <Compile Include="IServices\ICategoryServices.cs" />
+    <Compile Include="IServices\IReservationDetailsServices.cs" />
     <Compile Include="IServices\IFoodServices.cs" />
-    <Compile Include="IServices\IMenuFoodServices.cs" />
+    <Compile Include="IServices\IMenuCategoryServices.cs" />
     <Compile Include="IServices\IMenuServices.cs" />
     <Compile Include="IServices\INotifyServices.cs" />
     <Compile Include="IServices\IReservationServices.cs" />
     <Compile Include="IServices\ITableServices.cs" />
     <Compile Include="IServices\IUserBlogServices.cs" />
-    <Compile Include="IServices\IUserFoodServices.cs" />
+    <Compile Include="IServices\IUserMenuServices.cs" />
     <Compile Include="IServices\IUserVoucherServices.cs" />
     <Compile Include="IServices\IVoucherServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BlogServices.cs" />
+    <Compile Include="Services\CategoryServices.cs" />
     <Compile Include="Services\FoodServices.cs" />
-    <Compile Include="Services\MenuFoodServices.cs" />
+    <Compile Include="Services\MenuCategoryServices.cs" />
     <Compile Include="Services\MenuServices.cs" />
     <Compile Include="Services\NotifyServices.cs" />
+    <Compile Include="Services\ReservationDetailServices.cs" />
     <Compile Include="Services\ReservationServices.cs" />
     <Compile Include="Services\TableServices.cs" />
     <Compile Include="Services\UserBlogServices.cs" />
-    <Compile Include="Services\UserFoodServices.cs" />
+    <Compile Include="Services\UserMenuServices.cs" />
     <Compile Include="Services\UserVoucherServices.cs" />
     <Compile Include="Services\VoucherServices.cs" />
   </ItemGroup>
