--- a/src/FoodZone/FoodZone.Models/FoodZone.Models.csproj
+++ b/src/FoodZone/FoodZone.Models/FoodZone.Models.csproj
@@ -60,14 +60,16 @@
     <Compile Include="BaseEntities\BaseEntity.cs" />
     <Compile Include="BaseEntities\IBaseEntity.cs" />
     <Compile Include="Common\Blog.cs" />
+    <Compile Include="Common\Category.cs" />
     <Compile Include="Common\Food.cs" />
     <Compile Include="Common\Menu.cs" />
-    <Compile Include="Common\MenuFood.cs" />
+    <Compile Include="Common\MenuCategory.cs" />
     <Compile Include="Common\Notify.cs" />
     <Compile Include="Common\Reservation.cs" />
+    <Compile Include="Common\ReservationDetail.cs" />
     <Compile Include="Common\Table.cs" />
     <Compile Include="Common\UserBlog.cs" />
-    <Compile Include="Common\UserFood.cs" />
+    <Compile Include="Common\UserMenu.cs" />
     <Compile Include="Common\UserVoucher.cs" />
     <Compile Include="Common\Voucher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
