--- a/src/FoodZone/FoodZone.Web/Web.config
+++ b/src/FoodZone/FoodZone.Web/Web.config
@@ -14,11 +14,20 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="owin:AppStartup" value="FoodZone.Web.Startup,FoodZone.Web" />
+		<add key="MailFrom" value="quangnvhe130322@fpt.edu.vn" />
+		<add key="Password" value="Emlaai9x" />
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8" />
 		<httpRuntime targetFramework="4.8" />
 	</system.web>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="Network" from="quangnvhe130322@fpt.edu.vn">
+				<network host="smtp.gmail.com" port="587" userName="FoodZone" password="Emlaai9x" enableSsl="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -68,6 +77,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Unity.Abstractions" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.11.7.0" newVersion="5.11.7.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
