--- a/src/FoodZone/FoodZone.Web/packages.config
+++ b/src/FoodZone/FoodZone.Web/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.1.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="Hangfire.AspNet" version="0.2.0" targetFramework="net48" />
+  <package id="Hangfire.Core" version="1.7.30" targetFramework="net48" />
+  <package id="Hangfire.SqlServer" version="1.7.30" targetFramework="net48" />
   <package id="Identity.Samples" version="1.0.6" targetFramework="net48" />
   <package id="jQuery" version="3.6.0" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.4" targetFramework="net48" />
@@ -11,6 +14,10 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.SignalR" version="2.4.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net48" />
@@ -36,6 +43,7 @@
   <package id="starkbank-ecdsa" version="1.3.3" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
+  <package id="Unity" version="5.11.10" targetFramework="net48" />
   <package id="Unity.Abstractions" version="5.11.1" targetFramework="net48" />
   <package id="Unity.Container" version="5.11.1" targetFramework="net48" />
   <package id="Unity.Mvc" version="5.11.1" targetFramework="net48" />
