--- a/src/FoodZone/FoodZone.Web/FoodZone.Web.csproj
+++ b/src/FoodZone/FoodZone.Web/FoodZone.Web.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Helpers\UnityJobActivator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AccountDetailViewModel.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="ViewModels\HangfireAuthFilter.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
@@ -436,6 +437,7 @@
     <Content Include="Views\Home\_CustomerFeedback.cshtml" />
     <Content Include="Views\Shared\_GetByFloor.cshtml" />
     <Content Include="Views\Shared\_TableArea.cshtml" />
+    <Content Include="Views\Reservation\_Reservations.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
