--- a/src/FoodZone/FoodZone.Web/FoodZone.Web.csproj
+++ b/src/FoodZone/FoodZone.Web/FoodZone.Web.csproj
@@ -438,6 +438,7 @@
     <Content Include="Views\Shared\_GetByFloor.cshtml" />
     <Content Include="Views\Shared\_TableArea.cshtml" />
     <Content Include="Views\Reservation\_Reservations.cshtml" />
+    <Content Include="Views\Reservation\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
