Update user model

--- a/src/FoodZone/FoodZone.Data/FoodZone.Data.csproj
+++ b/src/FoodZone/FoodZone.Data/FoodZone.Data.csproj
@@ -127,6 +127,10 @@
     <Compile Include="Migrations\202208131308095_UpdateReservationDetailModel1.designer.cs">
       <DependentUpon>202208131308095_UpdateReservationDetailModel1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208181451363_UpdateUserModel1.cs" />
+    <Compile Include="Migrations\202208181451363_UpdateUserModel1.designer.cs">
+      <DependentUpon>202208181451363_UpdateUserModel1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -189,6 +193,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202208131308095_UpdateReservationDetailModel1.resx">
       <DependentUpon>202208131308095_UpdateReservationDetailModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208181451363_UpdateUserModel1.resx">
+      <DependentUpon>202208181451363_UpdateUserModel1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
